name:          proj
version:       0.2.8
cabal-version: >= 1.8
build-type:    Simple
License:       GPL
License-File:  LICENSE
Author:		Yi Zhen
Homepage:	http://sapphiresoft.io
Category:	Website

executable          proj
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
                  , ScopedTypeVariables
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , scotty-cookie
                  , wai
                  , warp
                  , resourcet
                  , text
                  , blaze-html
                  , persistent
                  , persistent-template
                  , persistent-sqlite
                  , persistent-postgresql
                  , monad-logger
                  , transformers
                  , wai-middleware-static
                  , wai-extra
                  , time
                  , clay
                  , blaze-markup
                  , cookie
                  , http-client                
                  , cryptonite
                  , http-types
                  , containers
                  , network
                  , websockets 
                  , HaskellNet   >= 0.5.1
                  , HaskellNet-SSL
                  , mime-mail
                  , bytestring
                  , pureMD5
                  , random
                  , filepath

    other-modules: Skeleton.Home
                 , Skeleton.Kernel.Account
                 , Skeleton.Kernel.Internal.Model
                 , Skeleton.Kernel.Post
                 , Skeleton.Kernel.Core.Helper
                 , Skeleton.Kernel.Core.Sort
                 , Skeleton.Kernel.PostHelper
                 , Skeleton.Kernel.Map
                 , Skeleton.Kernel.Core.Mail
                 , Skeleton.Kernel.Core.Cache
                 , Skeleton.Kernel.Core.Secure
                 , Skeleton.Kernel.Internal.Type
                 , Skeleton.Shell.Template
                 , Utilities.Chat.Server
                 , Utilities.Msg.Internal.Model
                 , Utilities.Msg.Mailbox
                 , Utilities.Login.Internal.Cookies
                 , Utilities.Login.Internal.Model
                 , Utilities.Login.Session

    default-language: Haskell2010
